# cookiecutter-microservice

./: README.rst  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  pyproject.toml  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: main.yml  pull_requests.yml  release.yml
{{ cookiecutter.project_name }}/ansible/: deploy.yml
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_name.lower().replace('-', '_')}}/: __main__.py  app.py
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_name.lower().replace('-', '_')}}/cli/: __init__.py
{{ cookiecutter.project_name }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/: .coveragerc  .dockerignore  .travis.yml  Dockerfile  MAINFEST.in  Makefile  config.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_validation.py
{{ cookiecutter.project_slug }}/tests/adapters/web/: test_core.py
{{ cookiecutter.project_slug }}/tests/handlers/: test_index.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  app.py  cli.py  config.py  middlewares.py  validation.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/adapters/web/: __init__.py  core.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/handlers/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/management/: cli.py  server.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/repositories/sql/: upgrade_schema.sql
