[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name.lower().replace('-', '_') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [
    { include = "{{ cookiecutter.project_name.lower().replace('-', '_') }}", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.3"}
aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.2.8"}
python = "^3.8"

[tool.poetry.dev-dependencies]
ansible = "2.9.13"
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
ipython = "*"
jinja2 = "2.11.2"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
rope = "*"
