[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "{{ cookiecutter.project_slug }}"
author = "{{ cookiecutter.author_name.replace('\"', '\\\"') }}"
author-email = "{{ cookiecutter.email }}"
home-page = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
classifiers = ["License :: OSI Approved :: MIT License"]

requires = [
    "aiodns==1.1.1",
    "aiohttp==3.5.1",
    "attrs==18.2.0",
    "cchardet==2.1.4",
    "cerberus==1.2",
    "click==7.0",
    "prometheus_client==0.5.0",
    "pyyaml==4.2b4",
    "raven==6.10.0",
    "raven-aiohttp==0.7.0",
    "ujson==1.35",
    "uvloop==0.11.3"
]

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "flake8==3.6.0",
    "flake8-bugbear==18.8.0",
    "flake8-builtins-unleashed==1.3.1",
    "flake8-comprehensions==1.4.1",
    "flake8-import-order==0.18",
    "flake8-pytest==1.3",
    "flake8-print==3.1.0",
    "mypy==0.650"
]
test = [
    "faker==1.0.1",
    "pytest==4.0.2",
    "pytest-aiohttp==0.3.0",
    "coverage==4.5.2"
]

[tool.black]
line-length = 100
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | dist
)/
'''
